[gd_scene load_steps=4 format=3 uid="uid://di85w5pvhsfd7"]

[ext_resource type="Script" uid="uid://eq32aeqid5dc" path="res://scenes/character.gd" id="1_rkhd4"]
[ext_resource type="Texture2D" uid="uid://du5gjmjsv8l0r" path="res://images/hooded-man.png" id="2_6p80c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ut53"]
size = Vector2(100.307, 156.826)

[node name="Character" type="Area2D"]
script = ExtResource("1_rkhd4")
metadata/_edit_lock_ = true

[node name="CharacterSprite" type="Sprite2D" parent="."]
scale = Vector2(1.72978, 1.70919)
texture = ExtResource("2_6p80c")
metadata/_edit_lock_ = true

[node name="ClickArea" type="CollisionShape2D" parent="."]
scale = Vector2(3.77175, 3.72685)
shape = SubResource("RectangleShape2D_8ut53")
debug_color = Color(0, 0.6, 0.701961, 0.419608)
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
